# points

./: .gitignore  LICENSE  README.md  build-cs.bat  build-pyext.bat  build.bat  template.bat
critical-point/core/: Cargo.toml
critical-point/core/src/: animation.rs  consts.rs  engine.rs  input.rs  lib.rs
critical-point/core/src/animation/: animator.rs  meta.rs  mod.rs  root_motion.rs  shape_key.rs  utils.rs  weapon_motion.rs
critical-point/core/src/animation/hit_motion/: mod.rs  resource.rs  sampler.rs
critical-point/core/src/asset/: animaiton.rs  character_physics.rs  loader.rs  mod.rs  nav_mesh.rs  ozz_animaiton.rs  shape.rs  stage.rs  target_box.rs  zone.rs  zone_physics.rs
critical-point/core/src/instance/: ai_brain.rs  ai_routine.rs  assemble.rs  base.rs  character.rs  mod.rs  player.rs  script.rs  stage.rs  values.rs  zone.rs
critical-point/core/src/instance/action/: aim.rs  base.rs  dodge.rs  empty.rs  general.rs  general_npc.rs  guard.rs  hit.rs  idle.rs  mod.rs  move.rs  move_npc.rs
critical-point/core/src/instance/ai_task/: base.rs  general.rs  idle.rs  mod.rs  move_to_character.rs  patrol.rs  sequence.rs
critical-point/core/src/logic/: base.rs  game.rs  mod.rs  physics.rs  playback.rs  script.rs  stage.rs  test_utils.rs  zone.rs
critical-point/core/src/logic/action/: base.rs  empty.rs  general.rs  general_npc.rs  hit.rs  idle.rs  mod.rs  move.rs  move_npc.rs  root_motion.rs  test_utils.rs
critical-point/core/src/logic/ai_task/: base.rs  general.rs  idle.rs  mod.rs  move_to_character.rs  patrol.rs
critical-point/core/src/logic/character/: action.rs  ai.rs  ai_brain.rs  character.rs  hit.rs  mod.rs  npc.rs  physics.rs  player.rs  value.rs  values.rs
critical-point/core/src/logic/physics/: contact.rs  layer.rs  mod.rs
critical-point/core/src/logic/system/: generation.rs  identity.rs  input.rs  mod.rs  random.rs  save.rs  state.rs
critical-point/core/src/parameter/: mod.rs  types.rs  verify.rs
critical-point/core/src/script/: ast.rs  builtin.rs  command.rs  config.rs  engine.rs  executor.rs  exports.rs  generator.rs  memory.rs  mod.rs  optimizer.rs  parser.rs  runner.rs  script.pest  shared.rs  test.rs  utils.rs
critical-point/core/src/template/: accessory.rs  ai_brain.rs  ai_routine.rs  attribute.rs  base.rs  character.rs  database.rs  entry.rs  equipment.rs  id.rs  jewel.rs  mod.rs  perk.rs  script.rs  slot.rs  stage.rs  test_utils.rs  variable.rs  zone.rs
critical-point/core/src/template/action/: aim.rs  base.rs  dodge.rs  general.rs  general_npc.rs  guard.rs  hit.rs  idle.rs  mod.rs  move.rs  move_npc.rs
critical-point/core/src/template/ai_task/: attack.rs  base.rs  general.rs  idle.rs  mod.rs  move_to_character.rs  patrol.rs  sequence.rs
critical-point/core/src/template/database/: base.rs  client.rs  mod.rs  server.rs
critical-point/core/src/utils/: error.rs  extend.rs  id.rs  key.rs  macros.rs  math.rs  mod.rs  ptr.rs  rc_cell.rs  rc_ptr.rs  shape.rs  symbol.rs  tests.rs
critical-point/core/src/utils/collection/: algorithm.rs  enum_bitset.rs  hash.rs  hash_index.rs  history_queue.rs  history_vec.rs  kvlist.rs  list.rs  mod.rs  pre_allocator.rs  prime_table.rs  sort.rs  table.rs  tiny_vec.rs
critical-point/core/src/utils/id/: mod.rs  num_id.rs  tmpl_id.rs
critical-point/core/src/utils/key/: mod.rs  raw.rs  virtual.rs
critical-point/core/src/utils/math/: common.rs  lerp.rs  mod.rs
critical-point/csbridge/: Cargo.toml
critical-point/csbridge/src/: animation.rs  engine.rs  id_str.rs  lib.rs  ptr.rs  utils.rs
critical-point/csbridge/src/skeletal/: animator.rs  mod.rs  player.rs  resource.rs
critical-point/csbridge/src/tests/: animation.rs  layout.rs  mod.rs  state_action.rs  state_action_any.rs  state_any.rs
critical-point/demo/: Cargo.toml  config.json  param.json  run.bat
critical-point/demo/src/: input.rs  main.rs
critical-point/pyext/: Cargo.toml  pyproject.toml
critical-point/pyext/src/: lib.rs  ozz_animation.rs  script.rs
critical-point/replay/: Cargo.toml
critical-point/replay/src/: main.rs
critical-point/wasm-types/: Cargo.toml
critical-point/wasm-types/src/: consts.rs  error.rs  host_buffer.rs  imports.rs  lib.rs  tests.rs  wrap.rs
turning-point/: .prettierrc  Cargo.toml  build.js  eslint.config.mjs  package-lock.json  package.json  ruff.toml  rust-toolchain  setup.py  tsconfig.json
turning-point-wasm/: Cargo.toml
turning-point-wasm/.cargo/: config.toml
turning-point-wasm/src/: lib.rs  your_code.rs
turning-point/demo/: demo.ts
turning-point/lib/: config.py
turning-point/lib/base/: __init__.py  builtin.py  cpext.py  inline.py  literal.py  types.py
turning-point/native/: animation.rs  error.rs  lib.rs
turning-point/prebuilt/: README.md
turning-point/src/: accessory.ts  attribute.ts  character.ts  entry.ts  equipment.ts  index.ts  jewel.ts  perk.ts  resource.ts  script.ts  variable.ts  zone.ts
turning-point/src/action/: animation.ts  base.ts  general.ts  general_npc.ts  hit.ts  hit_attr.ts  idle.ts  index.ts  keys.ts  move.ts  move_npc.ts
turning-point/src/ai/: barin.ts  index.ts  plan.ts  routine.ts  task_base.ts  task_general.ts  task_idle.ts  task_move_to_character.ts  task_patrol.ts  task_sequence.ts
turning-point/src/asset/: animation.ts  index.ts
turning-point/src/common/: base.ts  builtin.ts  config.ts  index.ts  math.ts  shape.ts  time.ts  word.ts
turning-point/src/native/: index.ts
turning-point/test/: common.test.ts  index.ts  instance.ts  native.test.ts  template.ts  time.test.ts  verify.ts
turning-point/test-case/: common.test.ts  time.test.ts
turning-point/test-res/: asset.ts  index.ts  instance.ts  template.ts  verify.ts
turning-point/tests/: __init__.py  accessory.py  action.py  character.py  entry.py  equipment.py  jewel.py  perk.py  stage.py
turning-point/turning_point/: __init__.py  accessory.py  action.py  attribute.py  buff.py  character.py  entry.py  equipment.py  jewel.py  perk.py  script.py  slot.py  stage.py  writer.py
turning-point/turning_point/base/: __init__.py  builtin.py  inline.py  literal.py  shape.py  types.py
(+125 files in other folders)
