[package]
name = "turning-point-wasm"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "turning_point"

[dependencies]
anyhow = "1"
critical-point-wasm-types = { path = "../critical-point/wasm-types" }
glam = { version = "0.30", features = ["libm", "approx"] }
glam-ext = { path = "../../glam-ext", features = ["libm", "approx"] }
static_assertions = "1"
talc = "5"
