[package]
edition = "2021"
name = "turining-point-node"
version = "0.0.0"

[lib]
path = "native/lib.rs"
crate-type = ["cdylib"]

[dependencies]
critical-point-core = { path = "../critical-point/core" }
glam = { version = "0.30", features = ["libm", "approx"] }
napi = { version = "3.3", default-features = false, features = ["napi4"] }
napi-derive = "3.2"
ozz-animation-rs = { path = "../../ozz-animation-rs", features = ["rkyv"] }
serde_json = "1"

[build-dependencies]
napi-build = "2.2"

[profile.release]
lto = true
strip = "symbols"
