[package]
name = "cirtical-point-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
anyhow = "1.0"
approx = "0.5"
base64 = "0.22"
bytecheck = { version = "0.6", default-features = false }
byteorder = "1.5.0"
cirtical-point-csgen = { path = "../csgen" }
const_format = "0.2"
educe = { version = "0.6", features = ["Debug", "Default"] }
enum-iterator = "2.1"
env_logger = "0.11.8"
glam = { version = "0.30", features = ["libm", "approx", "serde", "rkyv"] }
glam-ext = { version = "0.3", features = ["libm", "approx", "serde", "rkyv"] }
jolt-physics-rs = { path = "../../../jolt-physics-rs", features = ["deterministic", "glam-ext", "serde", "rkyv"] }
lazy_static = "1.4"
libc = "0.2"
libm = "0.2"
log = "0.4.27"
mimalloc = "0.1.42"
ozz-animation-rs = { path = "../../../ozz-animation-rs", features = ["rkyv"] }
paste = "1.0"
pest = "2.7"
pest_derive = "2.7"
ptr_meta = "0.3"
recastnavigation-rs = { path = "../../../recastnavigation-rs" }
regex = "1.10"
rkyv = { version = "0.8" }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
static_assertions = "1.1"
typetag = "0.2"
zip = { version = "2.2", default-features = false, features = [ "zstd" ] }

[dev-dependencies]
ctor = "0.2"

[features]
#default = ["server-side"]
server-side = []
debug-print = ["jolt-physics-rs/debug-print"]
