[package]
name = "critical-point-core"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1"
approx = "0.5"
arrayvec = { version = "0.7", features = ["serde"] }
bytecheck = { version = "0.8", default-features = false }
byteorder = "1"
critical-point-macros = { path = "../macros" }
const_format = "0.2"
ctor = "0.6"
educe = { version = "0.6", features = ["Debug", "Default"] }
enum-iterator = "2"
glam = { version = "0.30", features = ["libm", "approx", "serde", "rkyv"] }
glam-ext = { path = "../../../glam-ext", features = ["libm", "approx", "serde", "rkyv"] }
jolt-physics-rs = { path = "../../../jolt-physics-rs", features = ["deterministic", "glam-ext", "serde", "rkyv"] }
lasso = "0.7"
libc = "0.2"
libm = "0.2"
log = "0.4"
mmap-rs = "0.7"
mimalloc = "0.1"
oorandom = "11"
ozz-animation-rs = { path = "../../../ozz-animation-rs", features = ["rkyv"] }
paste = "1"
ptr_meta = "0.3"
recastnavigation-rs = { path = "../../../recastnavigation-rs" }
regex = "1"
rkyv = { version = "0.8", features = ["arrayvec-0_7", "thin-vec-0_2", "smallvec-1"] }
rustc-hash = "2"
serde = { version = "1", features = ["serde_derive", "rc"] }
serde_json = "1"
smallvec = { version = "1", features = ["serde"] }
static_assertions = "1"
talc = { path = "../../../talc/talc", features = ["nightly"] }
thin-vec = { version = "0.2", features = ["serde"] }
typetag = "0.2"
wasmtime = "43"
zip = { version = "6", default-features = false, features = [ "zstd" ] }

[features]
#default = ["server-side"]
server-side = []
debug-print = ["jolt-physics-rs/debug-print"]
for-turning-point = []

# Special features used to trigger C# code generation.
csharp = ["critical-point-macros/csharp"]

# Special features used to trigger Wasm(Rust) code generation.
wasm = ["critical-point-macros/wasm"]
