[package]
name = "critical-point-csbridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
critical-point-core = { path = "../core" }
chrono = "0.4"
const_format = "0.2"
fern = "0.7"
glam = { version = "0.30", features = ["libm", "approx", "serde", "rkyv"] }
glam-ext = { path = "../../../glam-ext", features = ["libm", "approx", "serde", "rkyv"] }
libc = "0.2"
log = "0.4"
ozz-animation-rs = { path = "../../../ozz-animation-rs" }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["serde_derive"] }

[dev-dependencies]
ctor = "0.2"

[features]
debug-print = ["critical-point-core/debug-print"]
