[package]
name = "replay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cirtical-point-core = { path = "../core" }
glam = { version = "0.27", features = ["approx", "serde", "rkyv"] }
jolt-physics-rs = { path = "../../../jolt-physics-rs", features = ["deterministic", "profile", "debug-renderer", "debug-print"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
structopt = "0.3"
